Fix fdo#56603 by NULL pointer checking in SwDrawTextShell::Execute

Pushed in master as c954e6e1317f82e06fac66556674bc066b429469

Change-Id: I98f246b2bafcf2669a8f6c3ec4c86ccee56519bf
Reviewed-on: https://gerrit.libreoffice.org/984
Reviewed-by: Norbert Thiebaud <nthiebaud@gmail.com>
Tested-by: Norbert Thiebaud <nthiebaud@gmail.com>